@@ -26,7 +26,12 @@ else
         funcs_new.hessianstructure = @() funcs.hessianstructure(auxdata);
     end
     if isfield(funcs, 'iterfunc')
+        % This assumes the pre-3.11 convention for iterfunc. If you would
+        % like to use the additional information that is available via the
+        % third input argument to iterfunc as of Ipopt version 3.11, you
+        % will need to modify this section by uncommenting the line below.
         funcs_new.iterfunc = @(t, f) funcs.iterfunc(t, f, auxdata);
+        % funcs_new.iterfunc = @(t, f, varstruct) funcs.iterfunc(t, f, varstruct, auxdata);
     end
     [x, info] = ipopt(x0, funcs_new, options_new);
 end
